[gd_scene load_steps=8 format=2]

[ext_resource path="res://00_assets/sprites/interactive/Heart.png" type="Texture" id=2]
[ext_resource path="res://02_prefabs/NoteDetector/note_detector.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 20 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 20 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 20 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 20, 20 )

[node name="Heart" type="AnimatedSprite"]
position = Vector2( 300, 755 )
frames = SubResource( 1 )
script = ExtResource( 3 )

[node name="GoodArea" type="Area2D" parent="."]
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoodArea"]
shape = SubResource( 2 )

[node name="GreatArea" type="Area2D" parent="."]
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GreatArea"]
shape = SubResource( 3 )

[node name="PrefectArea" type="Area2D" parent="."]
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PrefectArea"]
shape = SubResource( 4 )

[node name="MissArea" type="Area2D" parent="."]
position = Vector2( 30, 0 )
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MissArea"]
position = Vector2( 40, 0 )
shape = SubResource( 5 )

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="GoodArea" to="." method="_on_GoodArea_area_entered"]
[connection signal="area_entered" from="GreatArea" to="." method="_on_GreatArea_area_entered"]
[connection signal="area_exited" from="GreatArea" to="." method="_on_GreatArea_area_exited"]
[connection signal="area_entered" from="PrefectArea" to="." method="_on_PrefectArea_area_entered"]
[connection signal="area_exited" from="PrefectArea" to="." method="_on_PrefectArea_area_exited"]
[connection signal="area_entered" from="MissArea" to="." method="_on_MissArea_area_entered"]
